Freedom Sanbox Ant Deploy/src/objects/KPI_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Client_Referral_Required__c</fullName>
        <label>Client Referrals (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Referral__c</fullName>
        <label>% Client Referral</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EntitiesPercent__c</fullName>
        <formula>(Total_Entities_FY__c *  25) / 48</formula>
        <label>% Entities</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_per__c</fullName>
        <label>% Execution</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Executions_Required__c</fullName>
        <label>Engaged Members (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executions__c</fullName>
        <label>Engaged Members (Actual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Month__c</fullName>
        <label>Financial Month</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011-2012</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2012-2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013-2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014-2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015-2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Organization Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Required__c</fullName>
        <label>Meeting to Conversion (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion__c</fullName>
        <label>% Lead (Meeting to Conversion)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Meeting_Fixed_Required__c</fullName>
        <label>Lead to Meeting (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Meeting_Fixed__c</fullName>
        <label>% Lead (Meeting Fixed)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Entities_Required__c</fullName>
        <label>Members Enrolled (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Entities__c</fullName>
        <label>% New Entities</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Organization_Joining_Date__c</fullName>
        <label>Organization Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Approval_Required__c</fullName>
        <label>Plan Approvals (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Approval__c</fullName>
        <label>% Plan Approval</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Planner Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KPI_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Mgmt__c</fullName>
        <label>% Team Mgmt</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Testimonial_Required__c</fullName>
        <label>Testimonials (Ideal)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testimonial__c</fullName>
        <label>% Testimonial</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Client_Refferal__c</fullName>
        <label>Client Referrals (Actual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Entities_FY__c</fullName>
        <label>Members Enrolled (Actual )</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Entities_Till_Date__c</fullName>
        <label>Total Entities(Till Date)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Entities__c</fullName>
        <label>Total Entities(month)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Conversion__c</fullName>
        <label>Meeting to Conversion (Actual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Meetings__c</fullName>
        <label>Lead to Meeting (Actual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Leads_Score__c</fullName>
        <label>Total Leads (Ffreedom Score)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_old_Entities__c</fullName>
        <label>Total Number of Old Entities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Percentage__c</fullName>
        <formula>ROUND(Client_Referral__c + Execution_per__c  + Lead_Meeting_Fixed__c + Lead_Conversion__c + New_Entities__c + Plan_Approval__c + Testimonial__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total KPI Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Plan_approvals__c</fullName>
        <label>Plan Approvals (Actual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Testimonial__c</fullName>
        <label>Testimonials (Actual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Reports</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KPI-{000}</displayFormat>
        <label>KPI Reports  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>